--- a/graph-server/package.json
+++ b/graph-server/package.json
@@ -12,14 +12,14 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "dev": "concurrently \"npm:start:dev\" \"npm:gen-typings\" \"npm:prisma:generate\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run lint && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "gen-tyings": "ts-node ./src/generate-typings",
-    "dev":"concurrently \"npm:start:dev\" \"npm:gen-typings\" \"npm:prisma:generate\"",
+    "gen-typings": "ts-node ./src/generate-typings",
     "prisma:generate": "prisma generate --watch",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -35,8 +35,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.2.1",
     "apollo-server-express": "^3.10.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -60,6 +63,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "prisma": "^4.2.1",
+    "prisma-nestjs-graphql": "^17.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
